<resources>
    <string name="app_name">QAQ</string>
    <string name="server_name">Host name</string>
    <string name="server_port">Port</string>
    <string name="config_server_info">Config:</string>
    <string name="user_name">Username</string>
    <string name="submit">Submit</string>
    <string name="message_input">Input message</string>
    <string name="send_button">send</string>
    <string name="app_about">About</string>
    <string name="about_message_title" translatable="false">QAQ v1.4.0 (23)</string>
    <string name="about_message_developer">Client developed by I_Info, Server developed by Node Sans</string>
    <string name="about_message_thank">Special thanks to Sink</string>
    <string name="about_message_git" translatable="false">https://github.com/I-Info/QAQ-Android</string>
    <string name="error_conn_lost">Disconnected</string>
    <string name="error_conn_error">Connect error. Please try again latter.</string>
    <string name="error_invalid_msg">Detected invalid message</string>
    <string name="conn_success">Connected</string>
    <string name="error_conn_fail">Connect failed</string>
    <string name="stat_conn">Connecting…</string>
    <string name="require_ip">Please input host name</string>
    <string name="require_port">Please input server port</string>
    <string name="invalid_user">Invalid username</string>
    <string name="invalid_server_name">Invalid host name</string>
    <string name="invalid_port">Invalid server port</string>
    <string name="to_bottom" translatable="false">to bottom</string>
    <string name="error_msg_too_long">message is too long :( [>500]</string>
    <string name="get_success">Get data success</string>
    <string name="chatroom">Chatroom</string>
    <string name="config">Config</string>
    <string name="main_page">Main page</string>
    <string name="conn">Connect</string>
</resources>